syntax = "proto3";
package canto.erc20.v1;

import "gogoproto/gogo.proto";
import "cosmos/bank/v1beta1/bank.proto";

// This file generates Go types for legacy Canto proposals to enable
// backward compatibility with historical on-chain proposals stored with canto.erc20.v1 type URLs.
option go_package = "github.com/AltheaFoundation/althea-L1/x/erc20/types/canto";

// RegisterCoinProposal is a gov Content type to register a token pair for a
// native Cosmos coin.
message RegisterCoinProposal {
  option (gogoproto.equal) = false;
  // title of the proposal
  string title = 1;
  // proposal description
  string description = 2;
  // metadata of the native Cosmos coin
  cosmos.bank.v1beta1.Metadata metadata = 3 [ (gogoproto.nullable) = false ];
}

// RegisterERC20Proposal is a gov Content type to register a token pair for an
// ERC20 token
message RegisterERC20Proposal {
  option (gogoproto.equal) = false;
  // title of the proposal
  string title = 1;
  // proposal description
  string description = 2;
  // contract address of ERC20 token
  string erc20address = 3;
}

// ToggleTokenConversionProposal is a gov Content type to toggle the conversion
// of a token pair.
message ToggleTokenConversionProposal {
  option (gogoproto.equal) = true;
  // title of the proposal
  string title = 1;
  // proposal description
  string description = 2;
  // token identifier can be either the hex contract address of the ERC20 or the
  // Cosmos base denomination
  string token = 3;
}
